--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -43,8 +43,8 @@ Load all posts with site
   <tr>
     <th>Week</th>
     <th>Plans</th>
-    <th>sprites</th>
-    <th>background</th>
+    <th>Hacks(Todo)</th>
+    <th>Tangibles</th>
   </tr>
 
   {%comment%} 
@@ -61,8 +61,8 @@ Load all posts with site
 
   {% for index in (start..end) -%}
     {% assign plans = null | compact %}
-    {% assign sprites = null | compact %}
-    {% assign background = null | compact %}
+    {% assign hacks = null | compact %}
+    {% assign tangibles = null | compact %}
 
 
   {%comment%} 
@@ -74,7 +74,7 @@ Load all posts with site
   {%comment%} 
   <!-- prepare data blog post data for evaluation -->
   {%endcomment%}
-        {% assign week = post.courses[page.course].week | background: 0 %}
+        {% assign week = post.courses[page.course].week | tangibles: 0 %}
         {% assign title = post.title | compact %}
         {% assign url = post.url | compact %}
   
@@ -89,12 +89,12 @@ Load all posts with site
           {% if post.type == "plans" %} 
               {% assign plans = plans | unshift: title %}
               {% assign plans = plans | unshift: url %}
-          {% elsif post.type == "sprites" %}
-              {% assign sprites = sprites | unshift: title %}
-              {% assign spriites = sprites | unshift: url %} 
-          {% elsif post.type == "background" %}
-              {% assign background = background | unshift: title %}
-              {% assign background = background | unshift: url %} 
+          {% elsif post.type == "hacks" %}
+              {% assign hacks = hacks | unshift: title %}
+              {% assign hacks = hacks | unshift: url %} 
+          {% elsif post.type == "tangibles" %}
+              {% assign tangibles = tangibles | unshift: title %}
+              {% assign tangibles = tangibles | unshift: url %} 
           {% else %}
               {% assign uk = uk | unshift: title %}
               {% assign uk = uk | unshift: url %}     
@@ -107,7 +107,7 @@ Load all posts with site
   {%comment%} 
   <!-- ordering units and inserting column delimiters -->
   {%endcomment%}
-  {% assign units = units | concat:plans | concat:deli | concat:sprites | concat:deli | concat:background  %}
+  {% assign units = units | concat:plans | concat:deli | concat:hacks | concat:deli | concat:tangibles  %}
 
   {%comment%} 
   <!-- This Loop is maximum iterationss, since elements are pairs it will decrement a extra times at the end -->
