--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -42,9 +42,9 @@ Load all posts with site
 <table>
   <tr>
     <th>Week</th>
-    <th>Plans</th>
-    <th>Hacks(Todo)</th>
-    <th>Tangibles</th>
+    <th>Sprites</th>
+    <th>Platforms/objects</th>
+    <th>background</th>
   </tr>
 
   {%comment%} 
@@ -60,9 +60,9 @@ Load all posts with site
   {% assign deli = sym | compact %} 
 
   {% for index in (start..end) -%}
-    {% assign plans = null | compact %}
-    {% assign hacks = null | compact %}
-    {% assign tangibles = null | compact %}
+    {% assign sprites = null | compact %}
+    {% assign platforms = null | compact %}
+    {% assign background = null | compact %}
 
 
   {%comment%} 
@@ -74,7 +74,7 @@ Load all posts with site
   {%comment%} 
   <!-- prepare data blog post data for evaluation -->
   {%endcomment%}
-        {% assign week = post.courses[page.course].week | tangibles: 0 %}
+        {% assign week = post.courses[page.course].week | background: 0 %}
         {% assign title = post.title | compact %}
         {% assign url = post.url | compact %}
   
@@ -86,15 +86,15 @@ Load all posts with site
   {%comment%} 
   <!-- organizing blogs by type -->
   {%endcomment%}
-          {% if post.type == "plans" %} 
-              {% assign plans = plans | unshift: title %}
-              {% assign plans = plans | unshift: url %}
-          {% elsif post.type == "hacks" %}
-              {% assign hacks = hacks | unshift: title %}
-              {% assign hacks = hacks | unshift: url %} 
-          {% elsif post.type == "tangibles" %}
-              {% assign tangibles = tangibles | unshift: title %}
-              {% assign tangibles = tangibles | unshift: url %} 
+          {% if post.type == "sprites" %} 
+              {% assign sprites = sprites | unshift: title %}
+              {% assign sprites = sprites | unshift: url %}
+          {% elsif post.type == "platforms" %}
+              {% assign platforms = platforms | unshift: title %}
+              {% assign platforms = platforms | unshift: url %} 
+          {% elsif post.type == "background" %}
+              {% assign background = background | unshift: title %}
+              {% assign background = background | unshift: url %} 
           {% else %}
               {% assign uk = uk | unshift: title %}
               {% assign uk = uk | unshift: url %}     
@@ -107,7 +107,7 @@ Load all posts with site
   {%comment%} 
   <!-- ordering units and inserting column delimiters -->
   {%endcomment%}
-  {% assign units = units | concat:plans | concat:deli | concat:hacks | concat:deli | concat:tangibles  %}
+  {% assign units = units | concat:sprites | concat:deli | concat:platforms | concat:deli | concat:background  %}
 
   {%comment%} 
   <!-- This Loop is maximum iterationss, since elements are pairs it will decrement a extra times at the end -->
